# finance-wiz

./: .gitignore  PLAN.md  README.md  pyproject.toml
config/experiments/: ko_ema.yaml  ko_ema_5.yaml  ko_lgbm_5.yaml  ko_lstm.yaml  ko_lstm_5.yaml  ko_naive.yaml  ko_xgb.yaml  ko_xgb_5.yaml
src/finance_wiz/: cli.py  config.py  registry.py
src/finance_wiz/backtest/: metrics.py  runner.py
src/finance_wiz/datasets/: splits.py  targets.py
src/finance_wiz/features/: base.py  ta_features.py
src/finance_wiz/ingest/: base.py  yfinance_source.py
src/finance_wiz/models/: baselines.py  nn_lstm.py  tree.py
tests/: test_no_future_leakage.py
